--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -7,6 +7,12 @@
     <title>Document</title>
 </head>
 <body>
-    <a href="/login">Login</a>
+    <div id="form">
+        <input type="text" id="username">
+        <br>
+        <input type="password" id="password">
+        <br>
+        <button>Login</button>
+    </div>
 </body>
 </html>
