Frontend: Made login form

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -1,18 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    <div id="form">
-        <input type="text" id="username">
-        <br>
-        <input type="password" id="password">
-        <br>
-        <button>Login</button>
-    </div>
+    <main id="main-holder">
+        <h1 id="login-header">Login</h1>
+
+        <div id="form">
+            <input type="text" id="username" class="login-form-field" placeholder="Username">
+            <br>
+            <input type="password" id="password" class="login-form-field" placeholder="Password">
+            <br>
+            <button class="login-button">Login</button>
+        </div>
+    </main>
 </body>
 </html>
