Frontend: Setup for http requests

--- a/frontend/reader/index.html
+++ b/frontend/reader/index.html
@@ -75,6 +75,6 @@
         </div>
     </div>
 
-    <script src="reader.js"></script>
+    <script type="module" src="reader.js"></script>
 </body>
 </html>
