Frontend: made the look of the side

--- a/frontend/editor/index.html
+++ b/frontend/editor/index.html
@@ -1,12 +1,74 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Editor</title>
 </head>
 <body>
-    edit blogs here
+    <a href="/">Home</a>
+    <div id="post">
+        
+        <h1 id="title" contenteditable="true">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
+            
+        <div id="content" contenteditable="true">
+            <p>
+                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam obcaecati aspernatur debitis ex
+                ducimus eos assumenda hic est suscipit earum nihil asperiores sint exercitationem,
+                cupiditate vitae eveniet, et molestias iste!
+            </p>
+            <p>
+                Ratione aut ab architecto consectetur! Dicta adipisci quibusdam, impedit mollitia possimus voluptatum quis
+                et alias repellendus voluptates officiis commodi ipsa natus accusantium consequatur fugiat eligendi
+                . Quod repellat totam recusandae ad!
+            </p>
+            <p>
+                Voluptate cupiditate reiciendis vero eligendi voluptatum, autem veritatis? Nam eaque ipsam fugiat consequuntur
+                illo aperiam magni voluptatibus cumque eum vero, in voluptate laborum.
+                Veniam necessitatibus doloremque cupiditate saepe, quibusdam sed!
+            </p>
+            <p>
+                Nihil fuga harum esse non consectetur optio quam in, voluptas earum vel. Hic
+                corporis accusamus velit incidunt minima facere neque vel tempora inventore, harum
+                , quas reiciendis culpa consequuntur? Dolore, recusandae?
+            </p>
+            <p>
+                Ullam quod eveniet maiores inventore incidunt officia saepe totam! Tempora, placeat! Sed
+                nemo voluptate accusantium consequuntur nesciunt, commodi enim, saepe porro eos
+                illum ducimus quibusdam deleniti ullam ea? Voluptate, consequuntur.
+            </p>
+            <p>
+                Asperiores in quidem, nisi quibusdam a dolorem cupiditate? Repellat modi quo cupiditate error
+                fuga excepturi saepe minus, molestias explicabo cumque nesciunt? Harum quisquam
+                dolor vel blanditiis repudiandae mollitia reiciendis perspiciatis.
+            </p>
+            <p>
+                Dicta quidem, incidunt similique fugit voluptate ratione corporis doloremque ex obcaecati eveniet consequatur distinctio
+                fugiat blanditiis tenetur cupiditate voluptatibus provident quo molestias non a! Repudiandae
+                dolorem praesentium corporis ex reiciendis.
+            </p>
+            <p>
+                Laboriosam, illum optio! Eos numquam quibusdam pariatur vel quo eum fuga, tempora
+                debitis iusto. Maiores similique eaque quam distinctio et, consectetur architecto
+                consequatur, corporis veritatis vitae, possimus totam nesciunt quas.
+            </p>
+            <p>
+                Quasi animi aspernatur, libero quaerat corrupti quibusdam! Eaque voluptatibus quam fugit deserunt iste
+                provident fugiat, nemo tenetur, nesciunt sequi, amet nihil?
+                Repellat saepe laborum perferendis beatae fuga sint esse aperiam.
+            </p>
+            <p>
+                Praesentium ad alias animi expedita voluptates, omnis ducimus harum eos magnam molestiae quidem repudiandae
+                numquam? Debitis libero hic qui, laudantium fuga perspiciatis eius corrupti
+                enim, ex ipsa nemo, mollitia itaque.
+            </p>
+        </div> 
+        <button id="submit"> Submit</button> 
+    </div>
 </body>
 </html>
