--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -5,19 +5,25 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Login</title>
 </head>
-<body>
-    <main id="main-holder">
-        <h1 id="login-header">Login</h1>
 
-        <div id="form">
-            <input type="text" id="username" class="login-form-field" placeholder="Username">
-            <br>
-            <input type="password" id="password" class="login-form-field" placeholder="Password">
-            <br>
-            <button class="login-button">Login</button>
-        </div>
-    </main>
+<body>
+    <a href="/">Home</a>
+    <div class="center">
+        <main id="main-holder">
+            <h1 id="login-header">Login</h1>
+
+            <div id="form">
+                <input type="text" id="username" class="login-form-field" placeholder="Username">
+                <br>
+                <input type="password" id="password" class="login-form-field" placeholder="Password">
+                <br>
+                <button style="float: left;">register</button> 
+                <button style="float: right;">Login</button>
+            
+            </div>
+        </main>
+    </div>
 </body>
 </html>
