--- a/frontend/reader/index.html
+++ b/frontend/reader/index.html
@@ -11,8 +11,9 @@
     <link href="https://fonts.googleapis.com/css?family=Open+Sans&display=swap" rel="stylesheet">
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
-<body>
 
+<body>
+<a href="/">Home</a>
     <div id="post">
         <h1 id="title">Lorem ipsum dolor sit amet consectetur adipisicing elit.</h1>
 
