--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -1,20 +1,25 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Register</title>
 </head>
 <body>
-    <div id="form">
-        <input type="email" id="">
-        <br>
-        <input type="text" id="username">
-        <br>
-        <input type="password" id="password">
-        <br>
-        <button>Register</button>
-    </div>
+    <main id="main-holder">
+        <h1 id="register-header">Register</h1>
+        
+        <div id="form">
+            <input type="email" id="" class="register-form-field" placeholder="Email">
+            <br>
+            <input type="text" id="username" class="register-form-field" placeholder="Username">
+            <br>
+            <input type="password" id="password" class="register-form-field" placeholder="Password">
+            <br>
+            <button>Register</button>
+        </div>
+    </main>
 </body>
 </html>
