--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,13 +1,20 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Home</title>
     <link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
 </head>
 <body>
-    <a href="/login">Login</a>
+    <main id="main-holder">
+        <h1 id="login-header">Welcome</h1>
+            <a href="/login">Login</a>
+            <a href="/register">Register</a>
+            <a href="/search">Search</a>
+        </h1>
+    </main> 
 </body>
 </html>
