Frontend: Look of the site

--- a/frontend/login/index.html
+++ b/frontend/login/index.html
@@ -19,9 +19,8 @@
                 <br>
                 <input type="password" id="password" class="login-form-field" placeholder="Password">
                 <br>
-                <button style="float: left;">register</button> 
-                <button style="float: right;">Login</button>
-            
+                <button style="float: right;" onclick="">Login</button>
+                <button style="float: left;" onclick="">register</button>
             </div>
         </main>
     </div>
