--- a/frontend/register/index.html
+++ b/frontend/register/index.html
@@ -8,18 +8,21 @@
     <title>Register</title>
 </head>
 <body>
-    <main id="main-holder">
-        <h1 id="register-header">Register</h1>
+    <a href="/">Home</a>
+    <div class="center">
+        <main id="main-holder">
+            <h1 id="register-header">Register</h1>
         
-        <div id="form">
-            <input type="email" id="" class="register-form-field" placeholder="Email">
-            <br>
-            <input type="text" id="username" class="register-form-field" placeholder="Username">
-            <br>
-            <input type="password" id="password" class="register-form-field" placeholder="Password">
-            <br>
-            <button>Register</button>
-        </div>
-    </main>
+            <div id="form">
+                <input type="email" id="" class="register-form-field" placeholder="Email">
+                <br>
+                <input type="text" id="username" class="register-form-field" placeholder="Username">
+                <br>
+                <input type="password" id="password" class="register-form-field" placeholder="Password">
+                <br>
+                <button onclick="">Register</button>
+            </div>
+        </main>
+    </div>
 </body>
 </html>
