--- a/frontend/search/index.html
+++ b/frontend/search/index.html
@@ -1,12 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel="stylesheet" href="style.css">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
 <body>
-    search blogs and maybe users here too
+    <a href="/">Home</a>
+    <br>
+    <br>
+    <input id="Searchbar" onkeyup="" type="text" placeholder="type to search...">
 </body>
 </html>
